ENH: Add make option SOFLAGS for .so linking

--- a/classes/ds18b20/Makefile
+++ b/classes/ds18b20/Makefile
@@ -12,7 +12,7 @@ BIN = $(OUTDIR)/$(NAME).so
 
 INSTALL_DIR = $(DESTDIR)/usr/lib/hakit/classes/$(NAME)/device
 
-LDFLAGS += -lpthread -lrt
+SOFLAGS += -lpthread -lrt
 
 all:: $(BIN)
 
