ENH: MCP3008 - Latch scaled value

--- a/classes/mcp3008/Makefile
+++ b/classes/mcp3008/Makefile
@@ -4,6 +4,8 @@ PKGNAME := hakit-rpi-$(NAME)
 ARCH ?= $(shell arch)
 OUTDIR = device/$(ARCH)
 
+TARGET ?= rpi
+
 include ../../../hakit/defs.mk
 
 SRCS = main.c spidev.c
